--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     implementation 'com.google.maps:google-maps-services:0.18.0'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
 
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-nearby:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
 
 
 }
